--- a/index.html
+++ b/index.html
@@ -6,8 +6,10 @@
 
     <title>Mtendere Education Consult - Study Abroad Malawi</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="Mtendere Education Consult - Your trusted partner for studying abroad. We provide expert guidance, scholarship opportunities, and personalized support for Malawian students.">
-    <meta name="keywords" content="Mtendere Education Consult, study abroad, scholarships, international education, Malawian students, university application, visa support">
+    <meta name="description"
+        content="Mtendere Education Consult - Your trusted partner for studying abroad. We provide expert guidance, scholarship opportunities, and personalized support for Malawian students.">
+    <meta name="keywords"
+        content="Mtendere Education Consult, study abroad, scholarships, international education, Malawian students, university application, visa support">
     <meta name="author" content="Mtendere Education Consult">
 
     <!-- Bootstrap 5 & Custom Styles -->
@@ -77,13 +79,13 @@
     </div>
 
     <!-- Navigation -->
-    <nav class="site-nav sticky-top shadow-sm bg-white">
+    <nav class="site-nav sticky-top shadow-sm" id="main-navbar">
         <div class="container">
             <div class="d-flex justify-content-between py-3">
 
                 <a href="index.html" class="logo">
                     <img src="assets/imgs/Mtendere_Logo.jpeg" alt="Mtendere Education Consult" class="img-fluid"
-                        style="width: 150px; height: 2rem;">
+                        style="width: 150px; height: 25rem;">
                 </a>
 
                 <ul class="site-menu js-clone-nav list-unstyled m-0">
@@ -113,27 +115,36 @@
     <!-- Hero Carousel -->
     <section id="hero">
         <div class="owl-carousel hero-carousel">
-            <div class="hero-item" style="background-image: url('assets/imgs/Background/IMG-20250321-WA0304.jpg'); background-size: cover; background-position: center; height: 65vh; width: 100%; position: relative;">
-                <div class="hero-content" style="position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); text-align: center; color: white;">
+            <div class="hero-item"
+                style="background-image: url('assets/imgs/Background/IMG-20250321-WA0304.jpg'); background-size: cover; background-position: center; height: 65vh; width: 100%; position: relative;">
+                <div class="hero-content"
+                    style="position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); text-align: center; color: white;">
                     <h1 class="display-4">Welcome to Mtendere Education Consult</h1>
                     <p class="lead">Empowering Students to Achieve Their Dreams</p>
-                    <a href="#videoModal" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#videoModal">Watch
+                    <a href="#videoModal" class="btn btn-primary" data-bs-toggle="modal"
+                        data-bs-target="#videoModal">Watch
                         Video</a>
                 </div>
             </div>
-            <div class="hero-item" style="background-image: url('assets/imgs/Background/IMG-20250321-WA0304.jpg'); background-size: cover; background-position: center; height: 65vh; width: 100%; position: relative;">
-                <div class="hero-content" style="position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); text-align: center; color: white;">
+            <div class="hero-item"
+                style="background-image: url('assets/imgs/Background/IMG-20250321-WA0304.jpg'); background-size: cover; background-position: center; height: 65vh; width: 100%; position: relative;">
+                <div class="hero-content"
+                    style="position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); text-align: center; color: white;">
                     <h1 class="display-4">Welcome to Mtendere Education Consult</h1>
                     <p class="lead">Empowering Students to Achieve Their Dreams</p>
-                    <a href="#videoModal" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#videoModal">Watch
+                    <a href="#videoModal" class="btn btn-primary" data-bs-toggle="modal"
+                        data-bs-target="#videoModal">Watch
                         Video</a>
                 </div>
             </div>
-            <div class="hero-item" style="background-image: url('assets/imgs/Background/IMG-20250321-WA0304.jpg'); background-size: cover; background-position: center; height: 65vh; width: 100%; position: relative;">
-                <div class="hero-content" style="position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); text-align: center; color: white;">
+            <div class="hero-item"
+                style="background-image: url('assets/imgs/Background/IMG-20250321-WA0304.jpg'); background-size: cover; background-position: center; height: 65vh; width: 100%; position: relative;">
+                <div class="hero-content"
+                    style="position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); text-align: center; color: white;">
                     <h1 class="display-4">Welcome to Mtendere Education Consult</h1>
                     <p class="lead">Empowering Students to Achieve Their Dreams</p>
-                    <a href="#videoModal" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#videoModal">Watch
+                    <a href="#videoModal" class="btn btn-primary" data-bs-toggle="modal"
+                        data-bs-target="#videoModal">Watch
                         Video</a>
                 </div>
             </div>
@@ -177,7 +188,8 @@
                     </p>
 
                     <p data-aos="fade-up" data-aos-delay="200">
-                        <a href="#formModal" class="btn btn-sm btn-primary d-none d-lg-inline-block ml-4" data-toggle="modal">Enroll now
+                        <a href="#formModal" class="btn btn-sm btn-primary d-none d-lg-inline-block ml-4"
+                            data-toggle="modal">Enroll now
                         </a>
                     </p>
                 </div>
@@ -209,7 +221,7 @@
                         </div>
                     </div>
                 </div>
-                
+
                 <div class="mb-3">
                     <div class="btn-icon bg-primary">
                         <i class="fa fa-graduation-cap text-white"></i>
@@ -472,8 +484,8 @@
                             <div class="border-top d-flex justify-content-between pt-3 mt-3 align-items-center">
                                 <div><span class="price text-success">From $1,200/year</span></div>
                                 <div><a href="#formModal" class="btn btn-sm btn-primary d-none d-lg-inline-block ml-4"
-                                    data-toggle="modal">Enroll now
-                                </a></div>
+                                        data-toggle="modal">Enroll now
+                                    </a></div>
                             </div>
                         </div>
                     </div>
@@ -496,8 +508,8 @@
                             <div class="border-top d-flex justify-content-between pt-3 mt-3 align-items-center">
                                 <div><span class="price text-success">From $980/year</span></div>
                                 <div><a href="#formModal" class="btn btn-sm btn-primary d-none d-lg-inline-block ml-4"
-                                    data-toggle="modal">Enroll now
-                                </a></div>
+                                        data-toggle="modal">Enroll now
+                                    </a></div>
                             </div>
                         </div>
                     </div>
@@ -520,8 +532,8 @@
                             <div class="border-top d-flex justify-content-between pt-3 mt-3 align-items-center">
                                 <div><span class="price text-success">From $1,500/year</span></div>
                                 <div><a href="#formModal" class="btn btn-sm btn-primary d-none d-lg-inline-block ml-4"
-                                    data-toggle="modal">Enroll now
-                                </a></div>
+                                        data-toggle="modal">Enroll now
+                                    </a></div>
                             </div>
                         </div>
                     </div>
@@ -535,8 +547,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-5 mr-auto mb-5 mb-lg-0" data-aos="fade-up" data-aos-delay="0">
-                    <img src="assets/imgs/Background/IMG-20250321-WA0304.jpg" alt="image"
-                        class="img-fluid">
+                    <img src="assets/imgs/Background/IMG-20250321-WA0304.jpg" alt="image" class="img-fluid">
                 </div>
                 <div class="col-lg-7 ml-auto" data-aos="fade-up" data-aos-delay="100">
                     <h3 class="line-bottom mb-4">Why Choose Us</h3>
@@ -587,7 +598,8 @@
                                 <div class="accordion-body">
                                     <div class="d-flex">
                                         <div class="accordion-img mr-4">
-                                            <img src="assets/imgs/Background/IMG-20230910-WA0082.jpg" alt="Image" class="img-fluid">
+                                            <img src="assets/imgs/Background/IMG-20230910-WA0082.jpg" alt="Image"
+                                                class="img-fluid">
                                         </div>
                                         <p class="mb-4 pb-2">Good characters are essential for success in any field.
                                             They help students build strong relationships, communicate effectively, and
@@ -674,7 +686,7 @@
             <div class="section-header text-center mb-5">
                 <h6 class="text-primary fw-bold">Success Story's</h6>
                 <h1 class="display-5"><span class="text-primary">
-                   <span>Inspiring Journeys of Our Students</span></h1>
+                        <span>Inspiring Journeys of Our Students</span></h1>
                 </h1>
                 <p class="lead">
                     Transforming Lives Through Education
@@ -1027,11 +1039,12 @@
                         Join Our Global Network of Scholars</h2>
                     </h2>
                     <p class="text-white h5 mb-4" data-aos="fade-up" data-aos-delay="100">
-                        Experience a world of opportunities with Mtendere Education Consult. Our dedicated team is here to
+                        Experience a world of opportunities with Mtendere Education Consult. Our dedicated team is here
+                        to
                         guide you through every step of your educational journey, from application to graduation.
                     </p>
                     <a href="#formModal" class="btn btn-sm btn-primary d-none d-lg-inline-block ml-4"
-                    data-toggle="modal">Enroll Now
+                        data-toggle="modal">Enroll Now
                     </a>
                 </div>
             </div>
@@ -1384,13 +1397,13 @@
                 <div class="col-md-3 mb-4">
                     <h5 class="fw-bold">Services</h5>
                     <ul class="list-unstyled">
-                        <li><a href="study-abroad-programmes.html" class="text-white">Programmes</a></li>
-                        <li><a href="study-abroad-application.html" class="text-white">Application Process</a></li>
-                        <li><a href="study-abroad-scholarships.html" class="text-white">Scholarships</a></li>
-                        <li><a href="study-abroad-visa.html" class="text-white">Visa Information</a></li>
-                        <li><a href="study-abroad-testimonials.html" class="text-white">Testimonials</a></li>
-                        <li><a href="study-abroad-blog.html" class="text-white">Blog</a></li>
-                        <li><a href="study-abroad-contact.html" class="text-white">Contact Us</a></li>
+                        <li><a href="course.html" class="text-white">Programmes</a></li>
+                        <li><a href="#" class="text-white">Application Process</a></li>
+                        <li><a href="course.html" class="text-white">Scholarships</a></li>
+                        <li><a href="visa.html" class="text-white">Visa Information</a></li>
+                        <li><a href="testimonials.html" class="text-white">Testimonials</a></li>
+                        <li><a href="blog.html" class="text-white">Blog</a></li>
+                        <li><a href="contact.html" class="text-white">Contact Us</a></li>
                     </ul>
                 </div>
 
