--- a/about.html
+++ b/about.html
@@ -2,113 +2,113 @@
 <html lang="en-us">
 
 <head>
-    <meta charset="utf-8">
+  <meta charset="utf-8">
 
-    <title>Mtendere Education Consult - Study Abroad Malawi</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="Mtendere Education Consult - Your trusted partner for studying abroad. We provide expert guidance, scholarship opportunities, and personalized support for Malawian students.">
-    <meta name="keywords" content="Mtendere Education Consult, study abroad, scholarships, international education, Malawian students, university application, visa support">
-    <meta name="author" content="Mtendere Education Consult">
+  <title>Mtendere Education Consult - Study Abroad Malawi</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta name="description"
+    content="Mtendere Education Consult - Your trusted partner for studying abroad. We provide expert guidance, scholarship opportunities, and personalized support for Malawian students.">
+  <meta name="keywords"
+    content="Mtendere Education Consult, study abroad, scholarships, international education, Malawian students, university application, visa support">
+  <meta name="author" content="Mtendere Education Consult">
 
-    <!-- Bootstrap 5 & Custom Styles -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet">
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.css" rel="stylesheet">
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/owl.carousel/1.3.3/assets/owl.carousel.min.css" rel="stylesheet">
+  <!-- Bootstrap 5 & Custom Styles -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet">
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.css" rel="stylesheet">
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/owl.carousel/1.3.3/assets/owl.carousel.min.css" rel="stylesheet">
 
-    <link rel="stylesheet" href="assets/css/animate.min.css">
-    <link rel="stylesheet" href="assets/css/owl.carousel.min.css">
-    <link rel="stylesheet" href="assets/css/owl.theme.default.min.css">
-    <link rel="stylesheet" href="assets/css/jquery.fancybox.min.css">
-    <link rel="stylesheet" href="assets/fonts/icomoon/style.css">
-    <link rel="stylesheet" href="assets/fonts/flaticon/font/flaticon.css">
+  <link rel="stylesheet" href="assets/css/animate.min.css">
+  <link rel="stylesheet" href="assets/css/owl.carousel.min.css">
+  <link rel="stylesheet" href="assets/css/owl.theme.default.min.css">
+  <link rel="stylesheet" href="assets/css/jquery.fancybox.min.css">
+  <link rel="stylesheet" href="assets/fonts/icomoon/style.css">
+  <link rel="stylesheet" href="assets/fonts/flaticon/font/flaticon.css">
 
-    <link rel="stylesheet" href="assets/css/style.css">
-    <link rel="stylesheet" href="assets/scss/style.scss">
-    <link rel="stylesheet" href="assets/scss/_site-blocks.scss">
-    <link rel="stylesheet" href="assets/scss/_variables.scss">
+  <link rel="stylesheet" href="assets/css/style.css">
+  <link rel="stylesheet" href="assets/scss/style.scss">
+  <link rel="stylesheet" href="assets/scss/_site-blocks.scss">
+  <link rel="stylesheet" href="assets/scss/_variables.scss">
 
-    <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css">
+  <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css">
 </head>
 
 <body>
-    <div id="loadingSpinner">
-        <div class="spinner"></div>
+  <div id="loadingSpinner">
+    <div class="spinner"></div>
+  </div>
+
+  <!-- Mobile Menu -->
+  <div class="site-mobile-menu">
+    <div class="site-mobile-menu-header">
+      <div class="site-mobile-menu-close">
+        <span class="icofont-close js-menu-toggle"></span>
+      </div>
     </div>
+    <div class="site-mobile-menu-body"></div>
+  </div>
 
-    <!-- Mobile Menu -->
-    <div class="site-mobile-menu">
-        <div class="site-mobile-menu-header">
-            <div class="site-mobile-menu-close">
-                <span class="icofont-close js-menu-toggle"></span>
-            </div>
+  <!-- Top Bar -->
+  <div class="top-bar py-2 bg-light">
+    <div class="container">
+      <div class="row justify-content-between">
+
+        <div class="col-md-8 d-flex">
+          <a href="#faqModal" class="small mr-4" data-toggle="modal">
+            <i class="fa fa-question-circle mr-1"></i> Have a Question?
+          </a>
+          <a href="tel:" class="small text-dark mr-4">
+            <i class="fa fa-phone mr-1"></i>
+          </a>
+          <a href="mailto:mtendereeducationconsult@gmail.com" class="small text-dark">
+            <i class="fa fa-envelope mr-1"></i> mtendereeducationconsult@gmail.com
+          </a>
         </div>
-        <div class="site-mobile-menu-body"></div>
+
+        <div class="col-md-4 d-flex justify-content-end align-items-center">
+          <select class="form-select form-select-sm mr-3" id="language-select">
+            <option value="en">English</option>
+            <option value="es">Español</option>
+            <option value="fr">Français</option>
+          </select>
+        </div>
+
+      </div>
     </div>
+  </div>
 
-    <!-- Top Bar -->
-    <div class="top-bar py-2 bg-light">
-        <div class="container">
-            <div class="row justify-content-between">
+  <!-- Navigation -->
+  <nav class="site-nav sticky-top shadow-sm " id="main-navbar">
+    <div class="container">
+      <div class="d-flex justify-content-between py-3">
 
-                <div class="col-md-8 d-flex">
-                    <a href="#faqModal" class="small mr-4" data-toggle="modal">
-                        <i class="fa fa-question-circle mr-1"></i> Have a Question?
-                    </a>
-                    <a href="tel:" class="small text-dark mr-4">
-                        <i class="fa fa-phone mr-1"></i>
-                    </a>
-                    <a href="mailto:mtendereeducationconsult@gmail.com" class="small text-dark">
-                        <i class="fa fa-envelope mr-1"></i> mtendereeducationconsult@gmail.com
-                    </a>
-                </div>
+        <a href="index.html" class="logo">
+          <img src="assets/imgs/Mtendere_Logo.jpeg" alt="Mtendere Education Consult" class="img-fluid"
+            style="width: 150px; height: 2rem;">
+        </a>
 
-                <div class="col-md-4 d-flex justify-content-end align-items-center">
-                    <select class="form-select form-select-sm mr-3" id="language-select">
-                        <option value="en">English</option>
-                        <option value="es">Español</option>
-                        <option value="fr">Français</option>
-                    </select>
-                </div>
+        <ul class="site-menu js-clone-nav list-unstyled m-0">
+          <li><a href="index.html" class="nav-link active">Home</a></li>
+          <li><a href="about.html" class="nav-link active">About</a></li>
+          <li><a href="course.html" class="nav-link active">Scholarships</a></li>
+          <li><a href="service.html" class="nav-link active">Services</a></li>
+          <li><a href="team.html" class="nav-link active">Team</a></li>
+          <li><a href="blog.html" class="nav-link active">Blog</a></li>
+          <li><a href="gallery.html" class="nav-link active">Gallery</a></li>
+          <li><a href="contact.html" class="nav-link active">Contact</a></li>
+          <li><a href="event.html" class="nav-link active">Events</a></li>
+        </ul>
 
-            </div>
-        </div>
+        <a href="#" class="burger ml-auto float-right site-menu-toggle js-menu-toggle d-inline-block d-lg-none light"
+          data-toggle="collapse" data-target="#main-navbar">
+          <span></span>
+        </a>
+        <a href="#formModal" class="btn btn-sm btn-primary d-none d-lg-inline-block ml-4" data-toggle="modal">Enroll now
+        </a>
+      </div>
     </div>
-
-    <!-- Navigation -->
-    <nav class="site-nav sticky-top shadow-sm bg-white">
-        <div class="container">
-            <div class="d-flex justify-content-between py-3">
-
-                <a href="index.html" class="logo">
-                    <img src="assets/imgs/Mtendere_Logo.jpeg" alt="Mtendere Education Consult" class="img-fluid"
-                        style="width: 150px; height: 2rem;">
-                </a>
-
-                <ul class="site-menu js-clone-nav list-unstyled m-0">
-                    <li><a href="index.html" class="nav-link active">Home</a></li>
-                    <li><a href="about.html" class="nav-link active">About</a></li>
-                    <li><a href="course.html" class="nav-link active">Scholarships</a></li>
-                    <li><a href="service.html" class="nav-link active">Services</a></li>
-                    <li><a href="team.html" class="nav-link active">Team</a></li>
-                    <li><a href="blog.html" class="nav-link active">Blog</a></li>
-                    <li><a href="gallery.html" class="nav-link active">Gallery</a></li>
-                    <li><a href="contact.html" class="nav-link active">Contact</a></li>
-                    <li><a href="event.html" class="nav-link active">Events</a></li>
-                </ul>
-
-                <a href="#"
-                    class="burger ml-auto float-right site-menu-toggle js-menu-toggle d-inline-block d-lg-none light"
-                    data-toggle="collapse" data-target="#main-navbar">
-                    <span></span>
-                </a>
-                <a href="#formModal" class="btn btn-sm btn-primary d-none d-lg-inline-block ml-4"
-                    data-toggle="modal">Enroll now
-                </a>
-            </div>
-        </div>
-    </nav>
+  </nav>
 
   <!-- Header Start -->
   <div class="jumbotron jumbotron-fluid page-header position-relative overlay-bottom" style="margin-bottom: 90px;">
@@ -392,71 +392,70 @@
 
   <!-- Comment Section -->
   <div class="comment-section">
-      <h5>Comments</h5>
-      <div id="comment-list" class="mb-3"></div>
-      <div id="comment-form">
-          <input id="username" class="form-control mb-2" type="text" placeholder="Username" required />
-          <textarea id="comment" class="form-control mb-2" placeholder="Write your comment here..."
-              required></textarea>
-          <button onclick="submitComment()" class="btn btn-info">Post Comment</button>
-      </div>
+    <h5>Comments</h5>
+    <div id="comment-list" class="mb-3"></div>
+    <div id="comment-form">
+      <input id="username" class="form-control mb-2" type="text" placeholder="Username" required />
+      <textarea id="comment" class="form-control mb-2" placeholder="Write your comment here..." required></textarea>
+      <button onclick="submitComment()" class="btn btn-info">Post Comment</button>
+    </div>
   </div>
 
   <!-- Call to Action -->
   <div class="call-to-action text-center">
-      <h3>Ready to join Mtendere?</h3>
-      <p>Start your application today and shape your global future.</p>
-      <a href="#apply" class="btn cta-btn">Apply Now</a>
+    <h3>Ready to join Mtendere?</h3>
+    <p>Start your application today and shape your global future.</p>
+    <a href="#apply" class="btn cta-btn">Apply Now</a>
   </div>
 
   <!-- UNIVERSITY STATS & ACCREDITATIONS -->
   <section id="stats-accreditations" class="py-5 bg-white border-top">
-      <div class="container">
+    <div class="container">
       <!-- STATS -->
       <div class="row text-center mb-5">
-          <div class="col-md-6 col-lg-4 mb-4">
+        <div class="col-md-6 col-lg-4 mb-4">
           <h2 class="fw-bold display-5 text-primary">60,000+</h2>
           <p class="text-muted">Students Worldwide</p>
-          </div>
-          <div class="col-md-6 col-lg-4 mb-4">
+        </div>
+        <div class="col-md-6 col-lg-4 mb-4">
           <h2 class="fw-bold display-5 text-primary">12</h2>
           <p class="text-muted">Countries Represented</p>
-          </div>
-          <div class="col-md-6 col-lg-4 mb-4">
+        </div>
+        <div class="col-md-6 col-lg-4 mb-4">
           <h2 class="fw-bold display-5 text-primary">100+</h2>
           <p class="text-muted">University & College Partners</p>
-          </div>
+        </div>
       </div>
 
       <!-- ACCREDITATIONS -->
       <div class="text-center mb-4">
-          <h3 class="fw-semibold">Accreditations & Associations</h3>
-          <p class="text-muted">Trusted by renowned education bodies across the globe</p>
+        <h3 class="fw-semibold">Accreditations & Associations</h3>
+        <p class="text-muted">Trusted by renowned education bodies across the globe</p>
       </div>
 
       <div class="row justify-content-center align-items-center g-4">
-          <div class="col-4 col-sm-2">
+        <div class="col-4 col-sm-2">
           <img src="assets/imgs/gedu-logo.png" alt="Accreditation 3" class="img-fluid grayscale-hover">
-          </div>
-          <div class="col-4 col-sm-2">
+        </div>
+        <div class="col-4 col-sm-2">
           <img src="assets/imgs/cu-logo-white.webp" alt="Accreditation 1" class="img-fluid grayscale-hover">
-          </div>
-          <div class="col-4 col-sm-2">
+        </div>
+        <div class="col-4 col-sm-2">
           <img src="assets/imgs/ct-logo.png" alt="Accreditation 2" class="img-fluid grayscale-hover">
-          </div>
+        </div>
 
-          <div class="col-4 col-sm-2">
+        <div class="col-4 col-sm-2">
           <img src="assets/imgs/logoblackn.webp" alt="Accreditation 4" class="img-fluid grayscale-hover">
-          </div>
-          <div class="col-4 col-sm-2">
+        </div>
+        <div class="col-4 col-sm-2">
           <img src="assets/imgs/gbs-dubai-1.webp" alt="Accreditation 5" class="img-fluid grayscale-hover">
-          </div>
-          <div class="col-4 col-sm-2">
+        </div>
+        <div class="col-4 col-sm-2">
           <img src="assets/imgs/msm-unify-logo.png" alt="Accreditation 6" class="img-fluid grayscale-hover">
-          </div>
-          <div class="col-4 col-sm-2">
+        </div>
+        <div class="col-4 col-sm-2">
           <img src="assets/imgs/au-logo.png" alt="Accreditation 7" class="img-fluid grayscale-hover">
-          </div>
+        </div>
 
       </div>
   </section>
