--- a/about.html
+++ b/about.html
@@ -390,24 +390,6 @@
   </div>
   <!-- /.untree_co-section -->
 
-  <!-- Comment Section -->
-  <div class="comment-section">
-    <h5>Comments</h5>
-    <div id="comment-list" class="mb-3"></div>
-    <div id="comment-form">
-      <input id="username" class="form-control mb-2" type="text" placeholder="Username" required />
-      <textarea id="comment" class="form-control mb-2" placeholder="Write your comment here..." required></textarea>
-      <button onclick="submitComment()" class="btn btn-info">Post Comment</button>
-    </div>
-  </div>
-
-  <!-- Call to Action -->
-  <div class="call-to-action text-center">
-    <h3>Ready to join Mtendere?</h3>
-    <p>Start your application today and shape your global future.</p>
-    <a href="#apply" class="btn cta-btn">Apply Now</a>
-  </div>
-
   <!-- UNIVERSITY STATS & ACCREDITATIONS -->
   <section id="stats-accreditations" class="py-5 bg-white border-top">
     <div class="container">
@@ -456,7 +438,6 @@
         <div class="col-4 col-sm-2">
           <img src="assets/imgs/au-logo.png" alt="Accreditation 7" class="img-fluid grayscale-hover">
         </div>
-
       </div>
   </section>
 
@@ -508,7 +489,7 @@
         </div>
         <div class="col-lg-3">
           <div class="widget">
-            <h3>Gallery</h3>
+            <h5>Gallery</h5>
             <ul class="instafeed instagram-gallery list-unstyled">
               <li><a class="instagram-item" href="assets/imgs/International studies.jpg" data-fancybox="gal"><img
                     src="assets/imgs/International studies.jpg" alt="" width="72" height="72"></a>
@@ -557,7 +538,7 @@
         </div>
 
         <div class="col-md-4 mb-5">
-          <h3 class="text-white mb-4">Quick Links</h3>
+          <h5 class="text-white mb-4">Quick Links</h5>
           <div class="d-flex flex-column justify-content-start">
             <a class="text-white-50 mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Privacy Policy</a>
             <a class="text-white-50 mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Terms &
@@ -572,7 +553,7 @@
   </div>
   <div class="copyrights">
     <div class="container">
-      <p>&copy; Copyrights 2025 @Mtendere. All rights reserved.</<p>
+      <p>&copy; Copyrights 2025 @Mtendere. All rights reserved.</p>
     </div>
   </div>
 
