--- a/blog-details.html
+++ b/blog-details.html
@@ -162,152 +162,73 @@
             <p>
                 Be part of the Mtendere family and unlock your global potential.
             </p>
-
-            <div class="untree_co-section bg-light py-12">
-                <div class="container">
-                    <div class="row">
-                        <div class="col-lg-7 text-center mx-auto">
-                            <h3 class="line-bottom mb-4 text-blue-700">What Our Students Are Saying</h3>
-                            <div class="owl-carousel wide-slider-testimonial">
-                                <!-- Testimonial 1 -->
-                                <div class="item">
-                                    <blockquote class="block-testimonial">
-                                        <p class="text-lg font-medium text-gray-600">
-                                            &ldquo;Mtendere Education Consult’s personalized approach made all the
-                                            difference. I
-                                            found the right scholarship, and I’m now studying abroad in a field I’m
-                                            passionate
-                                            about.&rdquo;
-                                        </p>
-                                        <div class="author mt-4">
-                                            <img src="assets/imgs/students/IMG-20230910-WA0108.jpg" alt="Student 1"
-                                                class="rounded-full w-16 h-16">
-                                            <h3 class="text-xl font-semibold text-blue-700">Thoko M.</h3>
-                                            <p class="position text-gray-500">Engineering Student, University of Toronto
-                                            </p>
-                                        </div>
-                                    </blockquote>
-                                </div>
-
-                                <!-- Testimonial 2 -->
-                                <div class="item">
-                                    <blockquote class="block-testimonial">
-                                        <p class="text-lg font-medium text-gray-600">
-                                            &ldquo;The guidance from Mtendere helped me get my scholarship in the UK! I
-                                            now feel
-                                            confident about my academic future, and I couldn't be more grateful.&rdquo;
-                                        </p>
-                                        <div class="author mt-4">
-                                            <img src="assets/imgs/Malawian Students on Campus at Chandigarh University.JPG"
-                                                alt="Student 2" class="rounded-full w-16 h-16">
-                                            <h3 class="text-xl font-semibold text-blue-700">Amanda S.</h3>
-                                            <p class="position text-gray-500">Law Student, University of Manchester</p>
-                                        </div>
-                                    </blockquote>
-                                </div>
-
-                                <!-- Testimonial 3 -->
-                                <div class="item">
-                                    <blockquote class="block-testimonial">
-                                        <p class="text-lg font-medium text-gray-600">
-                                            &ldquo;Thanks to Mtendere, I could pursue my dream of studying abroad, and
-                                            it feels
-                                            incredible to see my hard work finally paying off. Highly recommend their
-                                            services!&rdquo;
-                                        </p>
-                                        <div class="author mt-4">
-                                            <img src="assets/imgs/students on campus CU.JPG" alt="Student 3"
-                                                class="rounded-full w-16 h-16">
-                                            <h3 class="text-xl font-semibold text-blue-700">Rob Smith</h3>
-                                            <p class="position text-gray-500">Product Designer, University of California
-                                            </p>
-                                        </div>
-                                    </blockquote>
-                                </div>
-
-                                <!-- Testimonial 4 -->
-                                <div class="item">
-                                    <blockquote class="block-testimonial">
-                                        <p class="text-lg font-medium text-gray-600">
-                                            &ldquo;Mtendere made the entire process of studying abroad so seamless. From
-                                            application to scholarship, everything was handled with care. I’m now living
-                                            my
-                                            dream in the US!&rdquo;
-                                        </p>
-                                        <div class="author mt-4">
-                                            <img src="assets/imgs/students/IMG-20230910-WA0107.jpg" alt="Student 4"
-                                                class="rounded-full w-16 h-16">
-                                            <h3 class="text-xl font-semibold text-blue-700">Grace M.</h3>
-                                            <p class="position text-gray-500">Computer Science Student, Stanford
-                                                University</p>
-                                        </div>
-                                    </blockquote>
-                                </div>
-                            </div>
-                            <button class="btn btn-primary mt-8" onclick="scrollToTop()">See More Success
-                                Stories</button>
-                        </div>
+            <p>
+                <strong>Contact us today to start your journey!</strong>
+            </p>
+        </div>
+    </div>
+    <div class="container">
+        <div class="row">
+            <div class="col-md-12 text-center">
+                <h2 class="headline-2">Related Blogs</h2>
+                <p class="subheading">Explore more stories and insights from our community</p>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-4">
+                <div class="card mb-4">
+                    <img src="assets/imgs/IMG-20250321-WA0151.jpg" class="card-img-top" alt="Blog Image 1">
+                    <div class="card-body">
+                        <h5 class="card-title">Blog Title 1</h5>
+                        <p class="card-text">A brief description of the blog content goes here. This should be a short
+                            summary that entices readers to click and read more.</p>
+                        <a href="blog-details.html" class="btn btn-primary">Read More</a>
                     </div>
                 </div>
             </div>
-
-
-        </div>
-    </div>
-
-    <!-- Blog Section Start -->
-    <div class="untree_co-section bg-light py-12">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-7 text-center mx-auto">
-                    <h3 class="line-bottom mb-4 text-blue-700">Latest News & Articles</h3>
-                    <p class="lead">Stay updated with the latest news and articles from Mtendere Education Consult.</p>
-                    <a href="blog.html" class="btn btn-primary mt-4">View All News</a>
-                    <div class="owl-carousel wide-slider-blog">
-                        <!-- Blog Post 1 -->
-                        <div class="item">
-                            <div class="blog-post">
-                                <img src="assets/imgs/2020mBatch Departure day.jpg" alt="Blog Post 1" class="img-fluid">
-                                <h4 class="mt-3"><a href="#">How to Secure Scholarships for International Studies</a>
-                                </h4>
-                                <p>Learn the best strategies to secure scholarships for your international studies.</p>
-                            </div>
-                        </div>
-
-                        <!-- Blog Post 2 -->
-                        <div class="item">
-                            <div class="blog-post">
-                                <img src="assets/imgs/Abroad students Malawi flag.jpg" alt="Blog Post 2"
-                                    class="img-fluid">
-                                <h4 class="mt-3"><a href="#">Top Universities for International Students</a></h4>
-                                <p>Discover the top universities that welcome international students with open arms.</p>
-                            </div>
-                        </div>
-
-                        <!-- Blog Post 3 -->
-                        <div class="item">
-                            <div class="blog-post">
-                                <img src="assets/imgs/doctors pose.jpg" alt="Blog Post 3" class="img-fluid">
-                                <h4 class="mt-3"><a href="#">Tips for Successful University Applications</a></h4>
-                                <p>Get tips and tricks for making your university application stand out.</p>
-                            </div>
-                        </div>
+            <div class="col-md-4">
+                <div class="card mb-4">
+                    <img src="assets/imgs/IMG-20250324-WA0026.jpg" class="card-img-top" alt="Blog Image 2">
+                    <div class="card-body">
+                        <h5 class="card-title">Blog Title 2</h5>
+                        <p class="card-text">A brief description of the blog content goes here. This should be a short
+                            summary that entices readers to click and read more.</p> 
+                        <a href="blog-details.html" class="btn btn-primary">Read More</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="card mb-4">
+                    <img src="assets/imgs/IMG-20250321-WA0151.jpg" class="card-img-top" alt="Blog Image 3">
+                    <div class="card-body">
+                        <h5 class="card-title">Blog Title 3</h5>
+                        <p class="card-text">A brief description of the blog content goes here. This should be a short
+                            summary that entices readers to click and read more.</p>
+                        <a href="blog-details.html" class="btn btn-primary">Read More</a>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-    <!-- Blog Section End -->
-
-    <!-- Comment Section -->
-    <div class="comment-section">
-        <h5>Comments</h5>
-        <div id="comment-list" class="mb-3"></div>
-        <div id="comment-form">
-            <input id="username" class="form-control mb-2" type="text" placeholder="Username" required />
-            <textarea id="comment" class="form-control mb-2" placeholder="Write your comment here..."
-                required></textarea>
-            <button onclick="submitComment()" class="btn btn-info">Post Comment</button>
+    <div class="container">
+        <div class="row">
+            <div class="col-md-12 text-center">
+                <h2 class="headline-2">Testimonials</h2>
+                <p class="subheading">Hear from our successful students and partners</p>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-4">
+                <div class="card mb-4">
+                    <img src="assets/imgs/IMG-20250321-WA0151.jpg" class="card-img-top" alt="Testimonial Image 1">
+                    <div class="card-body">
+                        <h5 class="card-title">Testimonial Title 1</h5>
+                        <p class="subheading">"Mtendere helped me find my dream university abroad. Their support was invaluable!"</p>
+                        <p class="card-text">- Student Name</p>
+                        <a href="testimonials.html" class="btn btn-primary">Read More</a>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 
@@ -320,22 +241,7 @@
 
     <!-- UNIVERSITY STATS & ACCREDITATIONS -->
     <section id="stats-accreditations" class="py-5 bg-white border-top">
-        <div class="container">
-            <!-- STATS -->
-            <div class="row text-center mb-5">
-                <div class="col-md-6 col-lg-4 mb-4">
-                    <h2 class="fw-bold display-5 text-primary">60,000+</h2>
-                    <p class="text-muted">Students Worldwide</p>
-                </div>
-                <div class="col-md-6 col-lg-4 mb-4">
-                    <h2 class="fw-bold display-5 text-primary">12</h2>
-                    <p class="text-muted">Countries Represented</p>
-                </div>
-                <div class="col-md-6 col-lg-4 mb-4">
-                    <h2 class="fw-bold display-5 text-primary">100+</h2>
-                    <p class="text-muted">University & College Partners</p>
-                </div>
-            </div>
+        <div class="container"> 
 
             <!-- ACCREDITATIONS -->
             <div class="text-center mb-4">
