--- a/course.html
+++ b/course.html
@@ -263,7 +263,7 @@
             <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
                 <div class="course-item bg-light">
                     <div class="position-relative overflow-hidden">
-                        <img class="img-fluid" src="img/course-1.jpg" alt="">
+                        <img class="img-fluid" src="assets/imgs/courses/IMG-20221128-WA0006.jpg" alt="">
                         <div class="w-100 d-flex justify-content-center position-absolute bottom-0 start-0 mb-4">
                             <a href="#" class="flex-shrink-0 btn btn-sm btn-primary px-3 border-end"
                                 style="border-radius: 30px 0 0 30px;">Read More</a>
@@ -296,7 +296,7 @@
             <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
                 <div class="course-item bg-light">
                     <div class="position-relative overflow-hidden">
-                        <img class="img-fluid" src="img/course-2.jpg" alt="">
+                        <img class="img-fluid" src="assets/imgs/courses/IMG-20230509-WA0117.jpg" alt="">
                         <div class="w-100 d-flex justify-content-center position-absolute bottom-0 start-0 mb-4">
                             <a href="#" class="flex-shrink-0 btn btn-sm btn-primary px-3 border-end"
                                 style="border-radius: 30px 0 0 30px;">Read More</a>
@@ -329,7 +329,7 @@
             <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
                 <div class="course-item bg-light">
                     <div class="position-relative overflow-hidden">
-                        <img class="img-fluid" src="img/course-3.jpg" alt="">
+                        <img class="img-fluid" src="assets/imgs/courses/IMG-20230620-WA0436.jpg" alt="">
                         <div class="w-100 d-flex justify-content-center position-absolute bottom-0 start-0 mb-4">
                             <a href="#" class="flex-shrink-0 btn btn-sm btn-primary px-3 border-end"
                                 style="border-radius: 30px 0 0 30px;">Read More</a>
@@ -563,100 +563,9 @@
         </div>
     </section>
 
-    <div class="untree_co-section bg-light py-12">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-7 text-center mx-auto">
-                    <h3 class="line-bottom mb-4 text-blue-700">What Our Students Are Saying</h3>
-                    <div class="owl-carousel wide-slider-testimonial">
-                        <!-- Testimonial 1 -->
-                        <div class="item">
-                            <blockquote class="block-testimonial">
-                                <p class="text-lg font-medium text-gray-600">
-                                    &ldquo;Mtendere Education Consult’s personalized approach made all the difference. I
-                                    found the right scholarship, and I’m now studying abroad in a field I’m passionate
-                                    about.&rdquo;
-                                </p>
-                                <div class="author mt-4">
-                                    <img src="images/person_1.jpg" alt="Student 1" class="rounded-full w-16 h-16">
-                                    <h3 class="text-xl font-semibold text-blue-700">Thoko M.</h3>
-                                    <p class="position text-gray-500">Engineering Student, University of Toronto</p>
-                                </div>
-                            </blockquote>
-                        </div>
-
-                        <!-- Testimonial 2 -->
-                        <div class="item">
-                            <blockquote class="block-testimonial">
-                                <p class="text-lg font-medium text-gray-600">
-                                    &ldquo;The guidance from Mtendere helped me get my scholarship in the UK! I now feel
-                                    confident about my academic future, and I couldn't be more grateful.&rdquo;
-                                </p>
-                                <div class="author mt-4">
-                                    <img src="images/person_2.jpg" alt="Student 2" class="rounded-full w-16 h-16">
-                                    <h3 class="text-xl font-semibold text-blue-700">Amanda S.</h3>
-                                    <p class="position text-gray-500">Law Student, University of Manchester</p>
-                                </div>
-                            </blockquote>
-                        </div>
-
-                        <!-- Testimonial 3 -->
-                        <div class="item">
-                            <blockquote class="block-testimonial">
-                                <p class="text-lg font-medium text-gray-600">
-                                    &ldquo;Thanks to Mtendere, I could pursue my dream of studying abroad, and it feels
-                                    incredible to see my hard work finally paying off. Highly recommend their
-                                    services!&rdquo;
-                                </p>
-                                <div class="author mt-4">
-                                    <img src="images/person_3.jpg" alt="Student 3" class="rounded-full w-16 h-16">
-                                    <h3 class="text-xl font-semibold text-blue-700">Rob Smith</h3>
-                                    <p class="position text-gray-500">Product Designer, University of California</p>
-                                </div>
-                            </blockquote>
-                        </div>
-
-                        <!-- Testimonial 4 -->
-                        <div class="item">
-                            <blockquote class="block-testimonial">
-                                <p class="text-lg font-medium text-gray-600">
-                                    &ldquo;Mtendere made the entire process of studying abroad so seamless. From
-                                    application to scholarship, everything was handled with care. I’m now living my
-                                    dream in the US!&rdquo;
-                                </p>
-                                <div class="author mt-4">
-                                    <img src="images/person_4.jpg" alt="Student 4" class="rounded-full w-16 h-16">
-                                    <h3 class="text-xl font-semibold text-blue-700">Grace M.</h3>
-                                    <p class="position text-gray-500">Computer Science Student, Stanford University</p>
-                                </div>
-                            </blockquote>
-                        </div>
-                    </div>
-                    <button class="btn btn-primary mt-8" onclick="scrollToTop()">See More Success Stories</button>
-                </div>
-            </div>
-        </div>
-    </div>
-
     <!-- UNIVERSITY STATS & ACCREDITATIONS -->
     <section id="stats-accreditations" class="py-5 bg-white border-top">
         <div class="container">
-            <!-- STATS -->
-            <div class="row text-center mb-5">
-                <div class="col-md-6 col-lg-4 mb-4">
-                    <h2 class="fw-bold display-5 text-primary">60,000+</h2>
-                    <p class="text-muted">Students Worldwide</p>
-                </div>
-                <div class="col-md-6 col-lg-4 mb-4">
-                    <h2 class="fw-bold display-5 text-primary">12</h2>
-                    <p class="text-muted">Countries Represented</p>
-                </div>
-                <div class="col-md-6 col-lg-4 mb-4">
-                    <h2 class="fw-bold display-5 text-primary">100+</h2>
-                    <p class="text-muted">University & College Partners</p>
-                </div>
-            </div>
-
             <!-- ACCREDITATIONS -->
             <div class="text-center mb-4">
                 <h3 class="fw-semibold">Accreditations & Associations</h3>
