--- a/testimonial.html
+++ b/testimonial.html
@@ -290,19 +290,7 @@
             </div>
         </div>
     </div>
-    <!-- Testimonial Start -->
-
-    <!-- Comment Section -->
-    <div class="comment-section">
-        <h5>Comments</h5>
-        <div id="comment-list" class="mb-3"></div>
-        <div id="comment-form">
-            <input id="username" class="form-control mb-2" type="text" placeholder="Username" required />
-            <textarea id="comment" class="form-control mb-2" placeholder="Write your comment here..."
-                required></textarea>
-            <button onclick="submitComment()" class="btn btn-info">Post Comment</button>
-        </div>
-    </div>
+    <!-- Testimonial End -->
 
     <!-- Call to Action -->
     <div class="call-to-action text-center">
@@ -314,22 +302,6 @@
     <!-- UNIVERSITY STATS & ACCREDITATIONS -->
     <section id="stats-accreditations" class="py-5 bg-white border-top">
         <div class="container">
-            <!-- STATS -->
-            <div class="row text-center mb-5">
-                <div class="col-md-6 col-lg-4 mb-4">
-                    <h2 class="fw-bold display-5 text-primary">60,000+</h2>
-                    <p class="text-muted">Students Worldwide</p>
-                </div>
-                <div class="col-md-6 col-lg-4 mb-4">
-                    <h2 class="fw-bold display-5 text-primary">12</h2>
-                    <p class="text-muted">Countries Represented</p>
-                </div>
-                <div class="col-md-6 col-lg-4 mb-4">
-                    <h2 class="fw-bold display-5 text-primary">100+</h2>
-                    <p class="text-muted">University & College Partners</p>
-                </div>
-            </div>
-
             <!-- ACCREDITATIONS -->
             <div class="text-center mb-4">
                 <h3 class="fw-semibold">Accreditations & Associations</h3>
