--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 
                 <a href="index.html" class="logo">
                     <img src="assets/imgs/Mtendere_Logo.jpeg" alt="Mtendere Education Consult" class="img-fluid"
-                        style="width: 150px; height: 25rem;">
+                        style="width: 20rem; height: 14rem;">
                 </a>
 
                 <ul class="site-menu js-clone-nav list-unstyled m-0">
@@ -106,7 +106,7 @@
                     <span></span>
                 </a>
                 <a href="#formModal" class="btn btn-sm btn-primary d-none d-lg-inline-block ml-4"
-                    data-toggle="modal">Enroll now
+                    data-toggle="modal" style="box-sizing: border-box; border-radius: 4px;">Enroll now
                 </a>
             </div>
         </div>
