--- a/index.html
+++ b/index.html
@@ -100,9 +100,7 @@
                     <li><a href="event.html" class="nav-link active">Events</a></li>
                 </ul>
 
-                <a href="#"
-                    class="burger ml-auto float-right site-menu-toggle js-menu-toggle d-inline-block d-lg-none light"
-                    data-toggle="collapse" data-target="#main-navbar">
+                <a class="burger ml-auto float-right site-menu-toggle js-menu-toggle d-inline-block d-lg-none light" data-toggle="collapse">
                     <span></span>
                 </a>
                 <a href="#formModal" class="btn btn-sm btn-primary d-none d-lg-inline-block ml-4"
