--- a/index.html
+++ b/index.html
@@ -84,8 +84,7 @@
             <div class="d-flex justify-content-between py-3">
 
                 <a href="index.html" class="logo">
-                    <img src="assets/imgs/Mtendere_Logo.jpeg" alt="Mtendere Education Consult" class="img-fluid"
-                        style="width: 20rem; height: 14rem;">
+                    <img src="assets/imgs/Mtendere_Logo.jpeg" alt="Mtendere Education Consult" class="img-fluid">
                 </a>
 
                 <ul class="site-menu js-clone-nav list-unstyled m-0">
