--- a/index.html
+++ b/index.html
@@ -46,8 +46,24 @@
                 <span class="icofont-close js-menu-toggle"></span>
             </div>
         </div>
-        <div class="site-mobile-menu-body"></div>
+        <div class="site-mobile-menu-body">
+            <!-- Add mobile menu content matching desktop navigation -->
+            <ul class="mobile-menu-list">
+                <li><a href="index.html" class="nav-link active">Home</a></li>
+                <li><a href="about.html" class="nav-link">About</a></li>
+                <li><a href="course.html" class="nav-link">Scholarships</a></li>
+                <li><a href="service.html" class="nav-link">Services</a></li>
+                <li><a href="team.html" class="nav-link">Team</a></li>
+                <li><a href="blog.html" class="nav-link">Blog</a></li>
+                <li><a href="gallery.html" class="nav-link">Gallery</a></li>
+                <li><a href="contact.html" class="nav-link">Contact</a></li>
+                <li><a href="event.html" class="nav-link">Events</a></li>
+            </ul>
+        </div>
     </div>
+
+    <!-- Add this overlay element -->
+    <div class="mobile-menu-overlay"></div>
 
     <!-- Top Bar -->
     <div class="top-bar py-2 bg-light">
